the best of th best

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>#</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<link rel="stylesheet" type="text/css" href="css/all.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!--[if lt IE 9]>
@@ -12,7 +12,6 @@
 		<![endif]-->
 	</head>
 <body>
-	<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus possimus obcaecati doloremque porro, dolores sapiente hic dolorum expedita incidunt sequi deserunt quam quo laboriosam error enim, eos aspernatur veniam id.</h1>
-	<p>weweLorem ipsum dolor sit amet, consectetur adipisicing elit. Enim omnis quidem excepturi itaque id. Delectus magnam, accusamus consequuntur laboriosam labore consequatur nam eaque nulla quo est iure rerum quam aliquam!</p>
+	<h1>rtr</h1>
 </body>
 </html>
