--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8">
 		<title>#</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="css/libs.css" />
 		<link rel="stylesheet" type="text/css" href="css/all.css" />
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+		<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script> -->
 		<script type="text/javascript" src="js/main.js"></script>
 		<!--[if lt IE 9]>
 			<script type="text/javascript" src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
