--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,23 @@
 				</div>
 				<div class="h-bottom">
 					<div class="center">
+						<span class="btn-mob">
+							<span></span>
+							<span></span>
+							<span></span>
+						</span>
 						<div class="nav-bar">
+							<div class="main-nav-mob-holder">
+								<ul class="main-nav">
+									<li><a href="#">Девочки</a></li>
+									<li><a href="#">Мальчики</a></li>
+									<li><a href="#">Малыши</a></li>
+									<li><a href="#">Обувь</a></li>
+									<li><a href="#">Аксессуары</a></li>
+									<li><a href="#">Новинки</a></li>
+									<li><a href="#">РаспродажА</a></li>
+								</ul>
+							</div>
 							<ul class="etc-nav">
 								<li class="mail-ico"><a href="#"><span><i>mail</i></span></a></li>
 								<li class="user-ico"><a href="#"><span><i>user</i></span></a></li>
@@ -49,15 +65,7 @@
 								</li>
 								<li class="card-ico"><a href="#"><span><i>card</i></span></a></li>
 							</ul>
-							<ul class="main-nav">
-								<li><a href="#">Девочки</a></li>
-								<li><a href="#">Мальчики</a></li>
-								<li><a href="#">Малыши</a></li>
-								<li><a href="#">Обувь</a></li>
-								<li><a href="#">Аксессуары</a></li>
-								<li><a href="#">Новинки</a></li>
-								<li><a href="#">РаспродажА</a></li>
-							</ul>
+							
 						</div>
 					</div>
 				</div>
