--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto:400,700&amp;subset=cyrillic" rel="stylesheet"> 
 		<link rel="stylesheet" type="text/css" href="css/libs.min.css" />
+		<link rel="stylesheet" type="text/css" href="https://rawgit.com/darlanmendonca/masonry-css/master/dist/masonry.css" />
 		<link rel="stylesheet" type="text/css" href="css/all.css" />
 		<!--[if lt IE 9]>
 		<script type="text/javascript" src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -116,8 +117,8 @@
 					</div>
 				</div>
 				<div class="center">
-					<div class="item-list-product">
-						<div class="item-product">
+					<div class="item-list-product masonry">
+						<div class="item-product masonry-item">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
@@ -132,10 +133,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product white-bg gray-corner">
+						<div class="item-product white-bg gray-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<img src="images/img2.jpg" alt="">
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -147,10 +148,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg">
+						<div class="item-product gray-bg masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<img src="images/img3.jpg" alt="">
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -162,10 +163,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product white-bg red-corner">
+						<div class="item-product white-bg red-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<img src="images/img4.jpg" alt="">
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -177,10 +178,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product white-bg gray-corner">
+						<div class="item-product white-bg gray-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<img src="images/img5.jpg" alt="">
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -192,10 +193,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg">
+						<div class="item-product gray-bg masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<img src="images/img6.jpg" alt="">
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -207,7 +208,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg">
+						<div class="item-product gray-bg masonry-item">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
@@ -225,7 +226,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg">
+						<div class="item-product gray-bg masonry-item">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
@@ -243,7 +244,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg">
+						<div class="item-product gray-bg masonry-item">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
@@ -256,12 +257,12 @@
 										</span>
 									</div>
 									<div class="f-p-right">
-										<a href="#" class="go-to">go-to</a>
+										<span class="color-text-gray">-15%</span>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="item-product white-bg red-corner">
+						<div class="item-product white-bg red-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
@@ -274,10 +275,24 @@
 										</span>
 									</div>
 									<div class="f-p-right">
-										<a href="#" class="go-to white-arrow">go-to</a>
+										<span class="color-text-white">-15%</span>
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+				<div class="seo-block">
+					<div class="center">
+						<div class="seo-txt">
+							<h1 class="text-center">Lorem ipsum dolor sit amet</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam illum laborum aliquid perferendis et dignissimos minima ipsa, at dicta, eius, illo eaque pariatur iste libero similique voluptas quas voluptates nobis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam illum laborum aliquid perferendis et dignissimos minima ipsa, at dicta, eius, illo eaque pariatur iste libero similique voluptas quas voluptates nobis.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam illum laborum aliquid perferendis et dignissimos minima ipsa, at dicta, eius, illo eaque pariatur iste libero similique voluptas quas voluptates nobis.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam illum laborum aliquid perferendis et dignissimos minima ipsa, at dicta, eius, illo eaque pariatur iste libero similique voluptas quas voluptates nobis.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam illum laborum aliquid perferendis et dignissimos minima ipsa, at dicta, eius, illo eaque pariatur iste libero similique voluptas quas voluptates nobis.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam illum laborum aliquid perferendis et dignissimos minima ipsa, at dicta, eius, illo eaque pariatur iste libero similique voluptas quas voluptates nobis.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam illum laborum aliquid perferendis et dignissimos minima ipsa, at dicta, eius, illo eaque pariatur iste libero similique voluptas quas voluptates nobis.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam illum laborum aliquid perferendis et dignissimos minima ipsa, at dicta, eius, illo eaque pariatur iste libero similique voluptas quas voluptates nobis.</p>
 						</div>
 					</div>
 				</div>
@@ -396,6 +411,7 @@
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
 		<script type="text/javascript" src="js/owl.carousel.min.js"></script>
+		<script type="text/javascript" src="js/jquery.show-more.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
