facking columns on index

--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,7 @@
 					</div>
 				</div>
 				<div class="center">
+					<!-- facking-custom-block -->
 					<div class="item-list-product masonry">
 						<div class="item-product masonry-item">
 							<div class="holder-product">
@@ -132,10 +133,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product white-bg gray-corner masonry-item">
+						<div class="item-product white-bg red-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img2.jpg" alt="">
+									<img src="images/img4.jpg" alt="">
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -147,25 +148,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg masonry-item">
+						<div class="item-product white-bg gray-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img3.jpg" alt="">
-								</a>
-								<div class="footer-product">
-									<div class="f-p-left">
-										<span class="uppercase color-text-red">теплая одежда</span>
-									</div>
-									<div class="f-p-right">
-										<span class="color-text-gray">-15%</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="item-product white-bg red-corner masonry-item">
-							<div class="holder-product">
-								<a href="#">
-									<img src="images/img4.jpg" alt="">
+									<img src="images/img2.jpg" alt="">
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -195,6 +181,23 @@
 						<div class="item-product gray-bg masonry-item">
 							<div class="holder-product">
 								<a href="#">
+									<img src="images/img3.jpg" alt="">
+								</a>
+								<div class="footer-product">
+									<div class="f-p-left">
+										<span class="uppercase color-text-red">теплая одежда</span>
+									</div>
+									<div class="f-p-right">
+										<span class="color-text-gray">-15%</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						
+						
+						<div class="item-product gray-bg masonry-item">
+							<div class="holder-product">
+								<a href="#">
 									<img src="images/img6.jpg" alt="">
 								</a>
 								<div class="footer-product">
@@ -207,7 +210,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg masonry-item">
+					</div>
+					<!-- facking-custom-block END-->
+					<div class="item-list-product">
+						<div class="item-product gray-bg">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
@@ -225,7 +231,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg masonry-item">
+						<div class="item-product gray-bg">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
@@ -243,7 +249,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product gray-bg masonry-item">
+						<div class="item-product gray-bg">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
@@ -261,7 +267,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="item-product white-bg red-corner masonry-item">
+						<div class="item-product white-bg red-corner">
 							<div class="holder-product">
 								<a href="#">
 									<img src="images/img.jpg" alt="">
