hardcode in facking index

--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
 						<div class="item-product masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<span class="custom-size"><img src="images/img.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -136,7 +136,7 @@
 						<div class="item-product white-bg red-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img4.jpg" alt="">
+									<span class="custom-size"><img src="images/img4.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -151,7 +151,7 @@
 						<div class="item-product white-bg gray-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img2.jpg" alt="">
+									<span class="custom-size"><img src="images/img2.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -166,7 +166,7 @@
 						<div class="item-product white-bg gray-corner masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img5.jpg" alt="">
+									<span class="custom-size"><img src="images/img5.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -181,7 +181,7 @@
 						<div class="item-product gray-bg masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img3.jpg" alt="">
+									<span class="custom-size"><img src="images/img3.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -193,12 +193,10 @@
 								</div>
 							</div>
 						</div>
-						
-						
 						<div class="item-product gray-bg masonry-item">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img6.jpg" alt="">
+									<span class="custom-size"><img src="images/img6.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -216,7 +214,7 @@
 						<div class="item-product gray-bg">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<span class="custom-size"><img src="images/img.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -234,7 +232,7 @@
 						<div class="item-product gray-bg">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<span class="custom-size"><img src="images/img.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -252,7 +250,7 @@
 						<div class="item-product gray-bg">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<span class="custom-size"><img src="images/img.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
@@ -270,7 +268,7 @@
 						<div class="item-product white-bg red-corner">
 							<div class="holder-product">
 								<a href="#">
-									<img src="images/img.jpg" alt="">
+									<span class="custom-size"><img src="images/img.jpg" alt=""></span>
 								</a>
 								<div class="footer-product">
 									<div class="f-p-left">
